# sainsc

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: CI.yml  cibuildwheel.yml
data/: signatures_brain.tsv  signatures_embryo.tsv
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  quickstart.ipynb  quickstart.rst  usage.ipynb
docs/source/_templates/python/: class.rst
docs/source/tutorials/: VisiumHD_CRC.ipynb  index.rst
sainsc/: __init__.py  _typealias.py  _utils.py  _utils_rust.pyi  datasets.py
sainsc/io/: __init__.py  _io.py  _io_utils.py  _stereoseq_chips.py
sainsc/lazykde/: _LazyKDE.py  __init__.py  _kernel.py  _utils.py
sainsc/utils/: __init__.py  _ambient_correction.py  _kernel.py  _signatures.py
src/: ambient_correction.rs  coordinates.rs  cosine.rs  cosine_zarr.rs  gridcounts.rs  lib.rs  sparsearray_conversion.rs  sparsekde.rs  utils.rs
