[package]
name         = "_utils_rust"
version      = "0.1.0"
edition      = "2021"
rust-version = "1.76.0"

[lib]
name       = "_utils_rust"
crate-type = ["cdylib"]

[dependencies]
bincode       = { version = "1.3" }
indexmap      = { version = ">= 2.1, < 2.6", features = ["rayon"] }
itertools     = { version = "0.12.1" }
ndarray       = { version = "0.15.6", features = ["rayon"] }
ndarray-stats = { version = "0.5.1" }
num           = { version = "0.4.1" }
numpy         = { version = "0.21" }
polars        = { version = "0.41", features = ["partition_by", "dtype-categorical"] }
polars-arrow  = { version = "0.41" }
pyo3          = { version = "0.21", features = ["extension-module"] }
pyo3-polars   = { version = "0.15" }
rayon         = { version = "1.8" }
sprs          = { version = "= 0.11.1", features = ["serde"] }
