[build-system]
requires      = ["setuptools>=61.0.0", "setuptools_scm[toml]>=6.2", "setuptools-rust>=1.7"]
build-backend = "setuptools.build_meta"


[project]
name            = "sainsc"
description     = "Segmentation-free Analysis of In Situ Capture data"
readme          = { file = "README.md", content-type = "text/markdown" }
license         = { file = "LICENSE" }
requires-python = ">=3.10"
dynamic         = ["version"]

authors = [
    { name = "Niklas Müller-Bötticher", email = "niklas.mueller-boetticher@charite.de" },
]
dependencies = [
    "anndata>=0.9",
    "matplotlib",
    "matplotlib-scalebar",
    "numba>=0.44",
    "numpy>=1.21",
    "pandas",
    "polars[pandas]>=1",
    "scikit-image>=0.18",
    "scipy>=1.9",
    "seaborn>=0.11",
    "typing-extensions>=4",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Typing :: Typed",
]

[project.optional-dependencies]
spatialdata = ["spatialdata>=0.1"]
docs = [
    "sphinx",
    "sphinx-autoapi>=3.1",
    "sphinx-copybutton",
    "sphinx-rtd-theme",
    "myst-nb",
]
data = ["pooch>=1"]
dev = ["sainsc[data,docs,spatialdata]", "pre-commit"]

[project.urls]
Homepage      = "https://github.com/HiDiHlabs/sainsc"
Documentation = "https://sainsc.readthedocs.io"
Repository    = "https://github.com/HiDiHlabs/sainsc"
Issues        = "https://github.com/HiDiHlabs/sainsc/issues"

[tool]

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
include = ["sainsc", "sainsc.io", "sainsc.lazykde", "sainsc.utils"]

[tool.setuptools_scm]

[[tool.setuptools-rust.ext-modules]]
target = "sainsc._utils_rust"

[tool.isort]
profile = "black"

[tool.black]
target-version = ["py310", "py311", "py312"]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true
warn_no_return         = false
packages               = "sainsc"
plugins                = "numpy.typing.mypy_plugin"

[tool.codespell]
ignore-words-list = "coo,crate"

[tool.cibuildwheel]
archs = 'auto64'
# build = 'cp310-*'
skip = "pp*" # skip PyPy

[tool.cibuildwheel.linux]
# cibuildwheel runs linux in containers so we need to install rust there
before-all  = "curl -sSf https://sh.rustup.rs | sh -s -- --default-toolchain stable -y"
environment = { PATH = "$PATH:$HOME/.cargo/bin" }
